force-app/main/default/objects/Contrataci_n__c/Contrataci_n__c.object-meta.xml
<CustomObject>
    <label>Contratación</label>
    <nameField>
        <label>Contratación</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contratación</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>