force-app/main/default/objects/Contrataci_n__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratación</relationshipLabel>
    <relationshipName>Contrataci_n1</relationshipName>
    <type>Lookup</type>
</CustomField>