force-app/main/default/objects/Contrataci_n__c/fields/Fecha_de_culminaci_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_culminaci_n__c</fullName>
    <label>Fecha de culminación</label>
    <type>Date</type>
</CustomField>