force-app/main/default/objects/Contrataci_n__c/fields/Perfil__c.field-meta.xml
<CustomField>
    <fullName>Perfil__c</fullName>
    <label>Perfil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coordinador</fullName>
            </value>
            <value>
                <fullName>Tutor</fullName>
            </value>
            <value>
                <fullName>Tallerista</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>