force-app/main/default/objects/Contrataci_n__c/fields/Tipo_de_Contrataci_n__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Contrataci_n__c</fullName>
    <label>Tipo de Contratación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Periodo</fullName>
            </value>
            <value>
                <fullName>Servicio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>