force-app/main/default/objects/Contrataci_n__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Perfil__c</columns>
    <columns>Tipo_de_Contrataci_n__c</columns>
    <columns>Fecha_de_inicio__c</columns>
    <columns>Fecha_de_culminaci_n__c</columns>
    <columns>Activo__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>